--- a/Iza/index.html
+++ b/Iza/index.html
@@ -113,7 +113,7 @@
                 </a>
             </div>
         </div>
-        <p style="margin: 3px 20px; padding: 10px 0;">&copy; 2024 Gagik Avtandilyan</p>
+        <p style="margin: 3px 20px; padding: 10px 0;">&copy; 2024 Designed, Developed and Deployed by Gagik Avtandilyan</p>
       </div>
     <script src="script.js"></script>
     </body>
