--- a/Iza-social-medias/index.html
+++ b/Iza-social-medias/index.html
@@ -45,7 +45,7 @@
                     </div>
                 </a>
             </div>
-            <p style="margin: 3px 20px;">&copy; 2024 Deployed by Gagik Avtandilyan</p>
+            <p style="margin: 3px 20px;">&copy; 2024 Designed, Developed and Deployed by Gagik Avtandilyan</p>
         </div>
     </div>
     <script src="./script.js"></script>
