--- a/Iza/index.html
+++ b/Iza/index.html
@@ -105,7 +105,7 @@
         
         <div class="container" style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center;">
             <div class="card">
-                <a class="link" href="https://gagikavt.github.io/iza_social_medias/" target="_blank">
+                <a class="link" href="https://gagikavt.github.io/iza-portfolio/Iza-social-medias/" target="_blank">
                     <img src="./img/qr-iza.png" alt="my_social_medias" width="50%" >
                     <div class="container">
                     <h4><b>My Social Medias</b></h4>
